styles/contract.css
main div {
  box-shadow: 5px 5px 5px 3px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
  border-radius: 10px;
  margin: auto;
}

/* Target all <p> elements inside <div> elements within the <main> element (Just one now)*/
main div p {
  font-size: 1.1em; 
  line-height: 1.2em; 
  margin: auto;
  background-color: #007bff;
  padding: 20px;
  color: white;
  max-width: 55vw; 
}

main div p a:first-of-type {
  color: #000;
}

main div p a:hover {
  color: white;
  text-decoration: underline;
}


/* Media query for tablets and small screens */
@media (max-width: 768px) {
  main div {
    padding: 15px; /* Reduced padding for smaller screens */
    font-size: 0.9em; /* Smaller font size for better fit */
  }
}

/* Media query for mobile devices */
@media (max-width: 480px) {
  main div {
    padding: 10px; /* Further reduced padding for mobile screens */
    font-size: 0.8em; /* Further reduced font size for mobile screens */
    max-width: 100%; /* Ensure the div takes full width on very small screens */
  }
}

